--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,42 @@
-# Python
-__pycache__/
-*.pyc
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Backend local secrets + venv
-backend/.env
-backend/.venv/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Node (Frontend)
-node_modules/
+# testing
+/coverage
 
-# Next.js build output
-.next/
+# next.js
+/.next/
+/out/
 
-# macOS / OS junk
+# production
+/build
+
+# misc
 .DS_Store
+*.pem
 
-# Local env files anywhere
-*.env
-.env.local
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+/.idea
